Updated package name for otel logs source
Signed-off-by: Asif Sohail Mohammed <nsifmoh@amazon.com>